# xrt-sync

./: .clang-format  .gitignore  LICENSE  README.md
.commit_stage/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.commit_stage/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.commit_stage/.github/workflows/: ci.yml
.commit_stage/benchmarks/: README.md  latency_bench.cc
.commit_stage/docs/: ARCHITECTURE.md  PROTOCOL.md
.commit_stage/include/xrtsync/: c_abi.h
.commit_stage/scripts/: generate_commit_history.sh
.commit_stage/src/: jitter_buffer.h  session.cc  wire_format.h
.commit_stage/tests/: wire_format_test.cc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: INTEGRATION.md
examples/: pose_streamer.cc
include/xrtsync/: xrtsync.h
src/: jitter_buffer.h  platform_socket.cc  platform_socket.h  wire_format.h
tests/: jitter_buffer_test.cc
